bug estranho corrigido

--- a/exploracao_dados/RepresentacaoTrajetoria.ipynb
+++ b/exploracao_dados/RepresentacaoTrajetoria.ipynb
@@ -255,7 +255,41 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QB7AH não está em nenhuma trilha?\n",
+      "ED70U não está em nenhuma trilha?\n",
+      "FCH7HB não está em nenhuma trilha?\n",
+      "EL64B não está em nenhuma trilha?\n",
+      "ED70T não está em nenhuma trilha?\n",
+      "EL66B não está em nenhuma trilha?\n",
+      "MA7AV não está em nenhuma trilha?\n",
+      "CSG48 não está em nenhuma trilha?\n",
+      "CSG42 não está em nenhuma trilha?\n",
+      "CSG44 não está em nenhuma trilha?\n",
+      "ES70N não está em nenhuma trilha?\n",
+      "ES70J não está em nenhuma trilha?\n",
+      "IF6CK não está em nenhuma trilha?\n",
+      "GE70F não está em nenhuma trilha?\n",
+      "EL65B não está em nenhuma trilha?\n",
+      "EL6AE não está em nenhuma trilha?\n",
+      "IF6BV não está em nenhuma trilha?\n",
+      "ES70B não está em nenhuma trilha?\n",
+      "EL6CB não está em nenhuma trilha?\n",
+      "EL6EE não está em nenhuma trilha?\n",
+      "EL6CC não está em nenhuma trilha?\n",
+      "EL65F não está em nenhuma trilha?\n",
+      "EL6BC não está em nenhuma trilha?\n",
+      "EL6CA não está em nenhuma trilha?\n",
+      "IF6CJ não está em nenhuma trilha?\n",
+      "EL6BB não está em nenhuma trilha?\n",
+      "EL6BA não está em nenhuma trilha?\n"
+     ]
+    }
+   ],
    "source": [
     "sugestoes = []\n",
     "with open('sugestoes.txt') as file:\n",
@@ -264,7 +298,7 @@
     "        if nome in disciplinas:\n",
     "            disc = disciplinas[nome]\n",
     "            sugestoes.append(disc)\n",
-    "            if disc.trilha == 'optativa' or disc.trilha == 'obrigatoria':\n",
+    "            if disc.trilha == 'Optativas Isoladas' or disc.trilha == 'obrigatoria':\n",
     "                print(f'{disc.nome} não está em nenhuma trilha?')\n",
     "        else:\n",
     "            print(f'{nome} não está em disciplinas')"
@@ -391,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,17 +452,30 @@
     "    trilha_2 = None\n",
     "\n",
     "    obrigatorias_por_periodo = []\n",
-    "    for i in range(0,11):\n",
+    "    ch_trilha1 = 0\n",
+    "    ch_trilha2 = 0\n",
+    "    ch_isoladas = 0\n",
+    "\n",
+    "    for i in range(0,12):\n",
     "        obrigatorias_por_periodo.append([])\n",
     "\n",
     "    for disc in disciplinas:\n",
     "        if disciplinas[disc].trilha == 'obrigatoria' and disc not in disciplinas_cursadas and disc not in [\"CSX53\"]:\n",
+    "            print(disc)\n",
     "            obrigatorias_por_periodo[disciplinas[disc].periodo - 1].append(disc)\n",
     "            #print(disciplinas[disc].codigo)\n",
-    "        elif  trilha_1 == None:\n",
-    "            trilha_1 = disciplinas[disc].trilha\n",
-    "        elif trilha_2 == None and disciplinas[disc].trilha != trilha_1: \n",
-    "            trilha_2 = disciplinas[disc].trilha\n",
+    "        elif disc in disciplinas_cursadas and disciplinas[disc].trilha != 'obrigatoria':\n",
+    "            if ((trilha_1 == None and disciplinas[disc].trilha != 'Optativas Isoladas') or disciplinas[disc].trilha == trilha_1):\n",
+    "                trilha_1 = disciplinas[disc].trilha\n",
+    "                ch_trilha1 += disciplinas[disc].ch\n",
+    "                print(f'trilha 1 : {trilha_1}')\n",
+    "            elif ((trilha_2 == None or disciplinas[disc].trilha != trilha_1 and disciplinas[disc].trilha != 'Optativas Isoladas') or disciplinas[disc].trilha == trilha_2): \n",
+    "                trilha_2 = disciplinas[disc].trilha\n",
+    "                print(f'trilha 2 : {trilha_2}')\n",
+    "                ch_trilha2 += disciplinas[disc].ch\n",
+    "            else:\n",
+    "                print(f'{disciplinas[disc].codigo}, {disciplinas[disc].trilha}')\n",
+    "                ch_isoladas += disciplinas[disc].ch\n",
     "\n",
     "    # Inicio algoritmo guloso\n",
     "    formado = False\n",
@@ -436,21 +483,19 @@
     "    semestre_atual = 0\n",
     "    ch_atual = 0\n",
     "    disciplinas_semestre = []\n",
-    "    ch_trilha1 = 0\n",
-    "    ch_trilha2 = 0\n",
-    "    ch_isoladas = 0\n",
     "\n",
     "    while not formado:\n",
     "        # Processamento por período\n",
     "        disciplinas_semestre.append([])\n",
     "        ch_atual = 0\n",
     "\n",
-    "        # Priorizamos sempre colocar as obrigatórias antes\n",
-    "        while periodo_atual < 11:\n",
-    "            if len(obrigatorias_por_periodo[periodo_atual]) > 0:\n",
-    "                for disc in obrigatorias_por_periodo[periodo_atual]:\n",
-    "                    disc = disciplinas[disc]\n",
-    "                    if disc.ch + ch_atual <= CH_desejada:\n",
+    "        while ch_atual < CH_desejada and not formado:\n",
+    "            # Priorizamos sempre colocar as obrigatórias antes\n",
+    "            while periodo_atual < 11:\n",
+    "                print(f'periodo atual {periodo_atual}')\n",
+    "                if len(obrigatorias_por_periodo[periodo_atual]) > 0:\n",
+    "                    for disc in obrigatorias_por_periodo[periodo_atual]:\n",
+    "                        disc = disciplinas[disc]\n",
     "                        print(disc.codigo)\n",
     "                        #print(disc.nome)\n",
     "                        ch_atual += disc.ch\n",
@@ -458,74 +503,88 @@
     "                        obrigatorias_por_periodo[periodo_atual].remove(disc.codigo)\n",
     "                        if len(obrigatorias_por_periodo[periodo_atual]) == 0:\n",
     "                            periodo_atual += 1\n",
+    "                        if ch_atual > CH_desejada:\n",
+    "                            break\n",
+    "                    break\n",
+    "                else:\n",
+    "                    periodo_atual += 1\n",
+    "            \n",
+    "            if ch_atual > CH_desejada:\n",
     "                break\n",
-    "            else:\n",
-    "                periodo_atual += 1\n",
-    "                    \n",
-    "        # Depois tentamos encaixar as optativas, priorizando as trilhas escolhidas\n",
-    "        for disc in sugest_aluno:\n",
-    "            disc = disc.codigo\n",
-    "            if (trilha_1 == None or disciplinas[disc].trilha == trilha_1) and disciplinas[disc].ch + ch_atual <= CH_desejada and ch_trilha1 < 90:\n",
-    "                trilha_1 = disciplinas[disc].trilha\n",
-    "                disciplinas_semestre[semestre_atual].append(disc)\n",
-    "                sugest_aluno.remove(disciplinas[disc])\n",
-    "                ch_trilha1 += disciplinas[disc].ch\n",
-    "                ch_atual += disciplinas[disc].ch\n",
-    "            elif (trilha_2 == None or disciplinas[disc].trilha == trilha_2) and disciplinas[disc].ch + ch_atual <= CH_desejada and ch_trilha2 < 90:\n",
-    "                trilha_2 = disciplinas[disc].trilha\n",
-    "                disciplinas_semestre[semestre_atual].append(disc)\n",
-    "                sugest_aluno.remove(disciplinas[disc])\n",
-    "                ch_trilha2 += disciplinas[disc].ch\n",
-    "                ch_atual += disciplinas[disc].ch\n",
-    "            elif disciplinas[disc].ch + ch_atual <= CH_desejada and ch_isoladas < 90 and disciplinas[disc].trilha != trilha_1 and disciplinas[disc].trilha != trilha_2:\n",
-    "                disciplinas_semestre[semestre_atual].append(disc)\n",
-    "                sugest_aluno.remove(disciplinas[disc])\n",
-    "                ch_isoladas += disciplinas[disc].ch\n",
-    "                ch_atual += disciplinas[disc].ch\n",
     "\n",
-    "        semestre_atual += 1\n",
+    "            # Depois tentamos encaixar as optativas, priorizando as trilhas escolhidas\n",
+    "            for disc in sugest_aluno:\n",
+    "                disc = disc.codigo\n",
+    "                if (trilha_1 == None or disciplinas[disc].trilha == trilha_1)  and ch_trilha1 < 90 and disciplinas[disc].trilha != 'Optativas Isoladas':\n",
+    "                    print(f'trilha 1 : {trilha_1}')\n",
+    "                    trilha_1 = disciplinas[disc].trilha\n",
+    "                    disciplinas_semestre[semestre_atual].append(disc)\n",
+    "                    sugest_aluno.remove(disciplinas[disc])\n",
+    "                    ch_trilha1 += disciplinas[disc].ch\n",
+    "                    ch_atual += disciplinas[disc].ch\n",
+    "                elif (trilha_2 == None or disciplinas[disc].trilha == trilha_2) and ch_trilha2 < 90 and disciplinas[disc].trilha != 'Optativas Isoladas':\n",
+    "                    print(f'trilha 2 : {trilha_2}')\n",
+    "                    trilha_2 = disciplinas[disc].trilha\n",
+    "                    disciplinas_semestre[semestre_atual].append(disc)\n",
+    "                    sugest_aluno.remove(disciplinas[disc])\n",
+    "                    ch_trilha2 += disciplinas[disc].ch\n",
+    "                    ch_atual += disciplinas[disc].ch\n",
+    "                elif ch_isoladas < 90 and disciplinas[disc].trilha != trilha_1 and disciplinas[disc].trilha != trilha_2:\n",
+    "                    disciplinas_semestre[semestre_atual].append(disc)\n",
+    "                    sugest_aluno.remove(disciplinas[disc])\n",
+    "                    ch_isoladas += disciplinas[disc].ch\n",
+    "                    ch_atual += disciplinas[disc].ch\n",
     "\n",
-    "        formado = True\n",
+    "                if ch_atual > CH_desejada:\n",
+    "                    break\n",
     "\n",
-    "        for periodo in obrigatorias_por_periodo:\n",
-    "            if len(periodo) > 0:\n",
-    "                print(f'Obrigatoria faltando: {len(periodo)} {periodo}')\n",
+    "            formado = True\n",
+    "            for periodo in obrigatorias_por_periodo:\n",
+    "                if len(periodo) > 0:\n",
+    "                    print(f'Obrigatoria faltando: {len(periodo)} {periodo}')\n",
+    "                    formado = False\n",
+    "            if ch_trilha1 < 90 or ch_trilha2 < 90 or ch_isoladas < 90:\n",
+    "                print(f'CH T1 - {ch_trilha1} T2 {ch_trilha2} T Isolada {ch_isoladas}')\n",
     "                formado = False\n",
-    "        if ch_trilha1 < 90 or ch_trilha2 < 90 or ch_isoladas < 90:\n",
-    "            print(f'CH faltando: T1 - {ch_trilha1} T2 - {ch_trilha2} T Isolada - {ch_isoladas}')\n",
-    "            formado = False\n",
+    "            print(formado)\n",
     "        \n",
     "        print(formado)\n",
     "        it += 1\n",
     "\n",
+    "        semestre_atual += 1\n",
+    "\n",
+    "        \n",
+    "\n",
     "        if formado == True or it > 15:\n",
+    "            print(f'Obrigatoria faltando: {len(periodo)} {periodo}')\n",
+    "            print(f'CH T1 - {ch_trilha1} T2 {ch_trilha2} T Isolada {ch_isoladas}')\n",
     "            return disciplinas_semestre\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'CSX53'"
+       "8"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "disciplinas['CSX53'].codigo"
+    "disciplinas['EEC31'].periodo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -533,23 +592,40 @@
      "output_type": "stream",
      "text": [
       "EEC31\n",
-      "Obrigatoria faltando: 1 ['CSX42']\n",
-      "CH faltando: T1 - 60 T2 - 60 T Isolada - 0\n",
-      "False\n",
+      "trilha 1 : Algoritmos E Complexidade\n",
+      "trilha 2 : Engenharia De Software\n",
+      "trilha 2 : Engenharia De Software\n",
       "CSX42\n",
-      "CH faltando: T1 - 60 T2 - 60 T Isolada - 120\n",
+      "periodo atual 0\n",
+      "periodo atual 1\n",
+      "periodo atual 2\n",
+      "periodo atual 3\n",
+      "periodo atual 4\n",
+      "periodo atual 5\n",
+      "periodo atual 6\n",
+      "periodo atual 7\n",
+      "EEC31\n",
+      "Obrigatoria faltando: 1 ['CSX42']\n",
+      "CH T1 - 60 T2 90 T Isolada 60\n",
       "False\n",
-      "True\n"
+      "False\n",
+      "periodo atual 8\n",
+      "CSX42\n",
+      "trilha 1 : Algoritmos E Complexidade\n",
+      "True\n",
+      "True\n",
+      "Obrigatoria faltando: 0 []\n",
+      "CH T1 - 120 T2 90 T Isolada 90\n"
      ]
     }
    ],
    "source": [
-    "sugests_alg = dar_sugestoes(10, sugestoes, 202266)"
+    "sugests_alg = dar_sugestoes(5, sugestoes, 202266)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -558,13 +634,10 @@
      "text": [
       "Periodo 1\n",
       "\n",
-      "['EEC31', 'EEY44', 'CSM40']\n",
+      "['EEC31', 'EEY44']\n",
       "Periodo 2\n",
       "\n",
-      "['CSX42', 'QB7AH', 'CSW45', 'CSH44']\n",
-      "Periodo 3\n",
-      "\n",
-      "['CSM44', 'EEY43']\n"
+      "['CSX42', 'QB7AH', 'CSA41']\n"
      ]
     }
    ],
@@ -573,21 +646,24 @@
     "for item in sugests_alg:\n",
     "    i += 1\n",
     "    print(f'Periodo {i}\\n')\n",
-    "    print(item)"
+    "    ch_periodo = 0\n",
+    "    for disc in item:\n",
+    "        ch_periodo += disciplinas[disc].ch\n",
+    "    print(f'Disciplinas: {item}, CH: ch_periodo')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['EEC31', 'EEY44', 'CSM40', 'CSW45', 'CSH44', 'EEY43', 'CSM43'], ['CSX42']]"
+       "[['EEC31', 'EEY44'], ['CSX42', 'QB7AH', 'CSA41']]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
