--- a/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
+++ b/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "8916d696-a698-4c45-9b3b-076c118ddb8c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
     "    id = 0\n",
     "    tries = 0\n",
     "\n",
-    "    minimium_entry_year -= 2000\n",
+    "    minimum_entry_year -= 2000\n",
     "    \n",
     "    while id == 0 and tries < max_tries:\n",
     "        try:\n",
@@ -333,129 +333,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
+   "id": "be485bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trim_user_data(user_data, num_materias):\n",
+    "    trimmed_data = user_data.copy()\n",
+    "\n",
+    "    trimmed_data = trimmed_data.sort_values(by=['ANO','PERIODO.1'])\n",
+    "    # Dropping last n rows using drop\n",
+    "    trimmed_data.drop(trimmed_data.tail(num_materias).index,\n",
+    "            inplace = True)\n",
+    "\n",
+    "    return trimmed_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "25a7df65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190493\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = select_random_student(dados['formados'], 20, 2016)\n",
+    "print(user_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8c7e7657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_data = get_all_data_from_student(user_id, dados['formados'])\n",
+    "trimmed_data = trim_user_data(user_data, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b95dc860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_data = user_data.sort_values(by=['ANO','PERIODO.1'])\n",
+    "user_data.to_csv(f'output/dados_{user_id}.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "bd1d7308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trimmed_data = trimmed_data.sort_values(by=['ANO','PERIODO.1'])\n",
+    "trimmed_data.to_csv(f'output/dados_trimmed_{user_id}.csv', sep=',')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "688b9d81",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sugestao 1: EEY44, peso: 0.65\n",
-      "Sugestao 2: QB7AH, peso: 0.61\n",
-      "Sugestao 3: CSM40, peso: 0.61\n",
-      "Sugestao 4: CSM44, peso: 0.60\n",
-      "Sugestao 5: CSW45, peso: 0.60\n",
-      "Sugestao 6: CSW48, peso: 0.59\n",
-      "Sugestao 7: CSH44, peso: 0.59\n",
-      "Sugestao 8: CSH45, peso: 0.59\n",
-      "Sugestao 9: EEY43, peso: 0.59\n",
-      "Sugestao 10: DI84D, peso: 0.59\n",
-      "Sugestao 11: CSM43, peso: 0.58\n",
-      "Sugestao 12: CSD41, peso: 0.57\n",
-      "Sugestao 13: ED70U, peso: 0.57\n",
-      "Sugestao 14: CSB52, peso: 0.57\n",
-      "Sugestao 15: CSI31, peso: 0.57\n",
-      "Sugestao 16: CSH41, peso: 0.57\n",
-      "Sugestao 17: CSB54, peso: 0.56\n",
-      "Sugestao 18: CSR41, peso: 0.56\n",
-      "Sugestao 19: EL75H, peso: 0.56\n",
-      "Sugestao 20: CSI52, peso: 0.56\n",
-      "Sugestao 21: CSD52, peso: 0.56\n",
-      "Sugestao 22: FCH7HB, peso: 0.56\n",
-      "Sugestao 23: CSR47, peso: 0.56\n",
-      "Sugestao 24: CSR44, peso: 0.56\n",
-      "Sugestao 25: CSH30, peso: 0.56\n",
-      "Sugestao 26: CSI58, peso: 0.56\n",
-      "Sugestao 27: CSE43, peso: 0.56\n",
-      "Sugestao 28: CSH43, peso: 0.56\n",
-      "Sugestao 29: CSR48, peso: 0.56\n",
-      "Sugestao 30: CSH42, peso: 0.56\n",
-      "Sugestao 31: FI70E, peso: 0.55\n",
-      "Sugestao 32: EEY41, peso: 0.55\n",
-      "Sugestao 33: FI70A, peso: 0.55\n",
-      "Sugestao 34: CSI55, peso: 0.55\n",
-      "Sugestao 35: CSI51, peso: 0.55\n",
-      "Sugestao 36: CSV41, peso: 0.55\n",
-      "Sugestao 37: CSA41, peso: 0.55\n",
-      "Sugestao 38: CSB51, peso: 0.55\n",
-      "Sugestao 39: CSV30, peso: 0.54\n",
-      "Sugestao 40: CSB41, peso: 0.54\n",
-      "Sugestao 41: CSV40, peso: 0.54\n",
-      "Sugestao 42: EL64B, peso: 0.54\n",
-      "Sugestao 43: CSA42, peso: 0.53\n",
-      "Sugestao 44: CSV52, peso: 0.53\n",
-      "Sugestao 45: EEC41, peso: 0.53\n",
-      "Sugestao 46: CSI57, peso: 0.53\n",
-      "Sugestao 47: FI70B, peso: 0.52\n",
-      "Sugestao 48: EEL51, peso: 0.52\n",
-      "Sugestao 49: CSB53, peso: 0.51\n",
-      "Sugestao 50: CSR43, peso: 0.51\n",
-      "Sugestao 51: CSI53, peso: 0.51\n",
-      "Sugestao 52: EEY42, peso: 0.51\n",
-      "Sugestao 53: CSR42, peso: 0.50\n",
-      "Sugestao 54: CSA45, peso: 0.50\n",
-      "Sugestao 55: ED70T, peso: 0.50\n",
-      "Sugestao 56: CSE40, peso: 0.50\n",
-      "Sugestao 57: CSI54, peso: 0.50\n",
-      "Sugestao 58: CSW47, peso: 0.50\n",
-      "Sugestao 59: CSI56, peso: 0.49\n",
-      "Sugestao 60: CSV45, peso: 0.49\n",
-      "Sugestao 61: CSE41, peso: 0.49\n",
-      "Sugestao 62: EEY51, peso: 0.49\n",
-      "Sugestao 63: CSD42, peso: 0.48\n",
-      "Sugestao 64: CSI41, peso: 0.48\n",
-      "Sugestao 65: CSM41, peso: 0.48\n",
-      "Sugestao 66: EL66B, peso: 0.48\n",
-      "Sugestao 67: CSR53, peso: 0.47\n",
-      "Sugestao 68: CSH51, peso: 0.47\n",
-      "Sugestao 69: CSM30, peso: 0.47\n",
-      "Sugestao 70: CSD45, peso: 0.46\n",
-      "Sugestao 71: MA70C, peso: 0.46\n",
-      "Sugestao 72: CSA43, peso: 0.45\n",
-      "Sugestao 73: MA7AV, peso: 0.45\n",
-      "Sugestao 74: CSG48, peso: 0.45\n",
-      "Sugestao 75: CSG42, peso: 0.43\n",
-      "Sugestao 76: CSG44, peso: 0.43\n",
-      "Sugestao 77: FI70D, peso: 0.43\n",
-      "Sugestao 78: ES70N, peso: 0.41\n",
-      "Sugestao 79: CSR40, peso: 0.40\n",
-      "Sugestao 80: ES70J, peso: 0.39\n",
-      "Sugestao 81: CSE47, peso: 0.38\n",
-      "Sugestao 82: IF6CK, peso: 0.37\n",
-      "Sugestao 83: CSV42, peso: 0.37\n",
-      "Sugestao 84: GE70F, peso: 0.37\n",
-      "Sugestao 85: EL65B, peso: 0.36\n",
-      "Sugestao 86: CSA44, peso: 0.35\n",
-      "Sugestao 87: CSR45, peso: 0.34\n",
-      "Sugestao 88: EL6AE, peso: 0.34\n",
-      "Sugestao 89: IF6BV, peso: 0.33\n",
-      "Sugestao 90: ES70B, peso: 0.33\n",
-      "Sugestao 91: CSD40, peso: 0.31\n",
-      "Sugestao 92: CSW55, peso: 0.31\n",
-      "Sugestao 93: EL6CB, peso: 0.28\n",
-      "Sugestao 94: EL6EE, peso: 0.28\n",
-      "Sugestao 95: EL6CC, peso: 0.27\n",
-      "Sugestao 96: EL65F, peso: 0.26\n",
-      "Sugestao 97: CSE42, peso: 0.25\n",
-      "Sugestao 98: EL6BC, peso: 0.24\n",
-      "Sugestao 99: EL6CA, peso: 0.23\n",
-      "Sugestao 100: IF6CJ, peso: 0.23\n",
-      "Sugestao 101: EL6BB, peso: 0.22\n",
-      "Sugestao 102: EL6BA, peso: 0.17\n"
+     "ename": "NameError",
+     "evalue": "name 'get_all_data_from_student' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m user_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m202266\u001b[39m\n\u001b[1;32m----> 3\u001b[0m dados_user \u001b[38;5;241m=\u001b[39m \u001b[43mget_all_data_from_student\u001b[49m(user_id, dados[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtodos\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msugestoes.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      6\u001b[0m     i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_all_data_from_student' is not defined"
      ]
     }
    ],
    "source": [
+    "user_id = 202266\n",
+    "\n",
+    "dados_user = get_all_data_from_student(user_id, dados[\"todos\"])\n",
     "\n",
     "with open('sugestoes.txt', 'w') as file:\n",
     "    i = 1\n",
-    "    for item in user_based_suggestions(202266, data_user = dados[\"regulares\"], data_rec = dados[\"formados\"], include_user_interests = True, cache= cache):\n",
-    "        print('Sugestao ' + str(i) + ': ' + item[0] + ', peso: ' + format(item[1], '.2f'))\n",
+    "    file.write(f'{user_id}\\n')\n",
+    "    for item in user_based_suggestions(user_id, data_user = dados[\"regulares\"], data_rec = dados[\"formados\"], include_user_interests = True, cache= cache):\n",
+    "        #print('Sugestao ' + str(i) + ': ' + item[0] + ', peso: ' + format(item[1], '.2f'))\n",
     "        i += 1\n",
-    "        file.write(f'{item[0]}\\n')"
+    "        file.write(f'{item[0]}\\n')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cb2878d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_ANONIMO</th>\n",
+       "      <th>CR</th>\n",
+       "      <th>PERIODO</th>\n",
+       "      <th>INGRESSO</th>\n",
+       "      <th>CODIGO</th>\n",
+       "      <th>ANO</th>\n",
+       "      <th>PERIODO.1</th>\n",
+       "      <th>NOTA</th>\n",
+       "      <th>CH</th>\n",
+       "      <th>SITUACAOALUNO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11357</td>\n",
+       "      <td>0,6967</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23/01/23</td>\n",
+       "      <td>CSD21</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4,7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11357</td>\n",
+       "      <td>0,6967</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23/01/23</td>\n",
+       "      <td>ES70P</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7,6</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11357</td>\n",
+       "      <td>0,6967</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23/01/23</td>\n",
+       "      <td>CSE20</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11357</td>\n",
+       "      <td>0,6967</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23/01/23</td>\n",
+       "      <td>ES70G</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7,3</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11357</td>\n",
+       "      <td>0,6967</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23/01/23</td>\n",
+       "      <td>CSF20</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6,3</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19877</th>\n",
+       "      <td>261036</td>\n",
+       "      <td>0,695</td>\n",
+       "      <td>2</td>\n",
+       "      <td>09/08/23</td>\n",
+       "      <td>ICSF13</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6,6</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19878</th>\n",
+       "      <td>261911</td>\n",
+       "      <td>0,7143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/08/23</td>\n",
+       "      <td>ICSD21</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19879</th>\n",
+       "      <td>261911</td>\n",
+       "      <td>0,7143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/08/23</td>\n",
+       "      <td>ELEX10</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19880</th>\n",
+       "      <td>261911</td>\n",
+       "      <td>0,7143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/08/23</td>\n",
+       "      <td>ICSF13</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19881</th>\n",
+       "      <td>261911</td>\n",
+       "      <td>0,7143</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17/08/23</td>\n",
+       "      <td>COE70A</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Regular</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19882 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID_ANONIMO      CR PERIODO  INGRESSO  CODIGO   ANO  PERIODO.1 NOTA  CH  \\\n",
+       "0           11357  0,6967       5  23/01/23   CSD21  2023          1  4,7  45   \n",
+       "1           11357  0,6967       5  23/01/23   ES70P  2023          1  7,6  45   \n",
+       "2           11357  0,6967       5  23/01/23   CSE20  2023          1    6  60   \n",
+       "3           11357  0,6967       5  23/01/23   ES70G  2023          1  7,3  45   \n",
+       "4           11357  0,6967       5  23/01/23   CSF20  2023          1  6,3  45   \n",
+       "...           ...     ...     ...       ...     ...   ...        ...  ...  ..   \n",
+       "19877      261036   0,695       2  09/08/23  ICSF13  2023          2  6,6  90   \n",
+       "19878      261911  0,7143       1  17/08/23  ICSD21  2023          2    8  45   \n",
+       "19879      261911  0,7143       1  17/08/23  ELEX10  2023          2    8  45   \n",
+       "19880      261911  0,7143       1  17/08/23  ICSF13  2023          2    6  90   \n",
+       "19881      261911  0,7143       1  17/08/23  COE70A  2023          2    8  30   \n",
+       "\n",
+       "      SITUACAOALUNO  \n",
+       "0           Regular  \n",
+       "1           Regular  \n",
+       "2           Regular  \n",
+       "3           Regular  \n",
+       "4           Regular  \n",
+       "...             ...  \n",
+       "19877       Regular  \n",
+       "19878       Regular  \n",
+       "19879       Regular  \n",
+       "19880       Regular  \n",
+       "19881       Regular  \n",
+       "\n",
+       "[19882 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados[\"regulares\"]"
    ]
   },
   {
